# pbs-mcp-demo

./: .gitignore  .gitmodules  PROGRAMMING_PLAN.md  README.md  pyproject.toml  requirements.txt  start_pbs_mcp.sh
config/: claude_desktop_config.json
examples/: hello_world_script.sh  job_monitoring.py  openai_mcp_bridge.py  simple_submit.py  train_resnet_aurora.py
src/pbs_mcp/: __init__.py  __main__.py  prompts.py  resources.py  server.py  tools.py  utils.py
tests/: hello_world_script.sh  test_integration.py  test_resources.py  test_script_generators.py  test_tools.py
