[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbs-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server that surfaces PBS scheduler operations"
readme = "README.md"
authors = [
  { name = "PBS MCP Team", email = "engineering@example.com" }
]
requires-python = ">=3.8"
dependencies = [
  "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "mypy>=1.0.0",
  "python-dotenv",
]

[project.urls]
Homepage = "https://example.com/pbs-mcp"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pbs_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
